# MusicApp

./: CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  install.sh
data/: info.txt
docs/html/: List_8cpp.html  List_8cpp_source.html  List_8h.html  List_8h_source.html  Musica_8cpp.html  Musica_8h.html  Musica_8h_source.html  Node_8cpp.html  Node_8cpp_source.html  Node_8h.html  Node_8h_source.html  Playlist_8cpp.html  Playlist_8h.html  Playlist_8h_source.html  README_8md.html  Sistema_8cpp.html  Sistema_8h.html  Sistema_8h_source.html  annotated.html  classList-members.html  classList.html  classMusica-members.html  classMusica.html  classNode-members.html  classNode.html  classPlaylist-members.html  classPlaylist.html  classSistema-members.html  classSistema.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  (+5 more)
docs/latex/: List_8cpp.tex  List_8cpp_source.tex  List_8h.tex  List_8h_source.tex  Musica_8cpp.tex  Musica_8h.tex  Musica_8h_source.tex  Node_8cpp.tex  Node_8cpp_source.tex  Node_8h.tex  Node_8h_source.tex  Playlist_8cpp.tex  Playlist_8h.tex  Playlist_8h_source.tex  Sistema_8cpp.tex  Sistema_8h.tex  Sistema_8h_source.tex  annotated.tex  classList.tex  classMusica.tex  classNode.tex  classPlaylist.tex  classSistema.tex  files.tex  (+5 more)
include/: List.h  Musica.h  Node.h  Playlist.h  Sistema.h
src/: List.cpp  Musica.cpp  Node.cpp  Playlist.cpp  Sistema.cpp  main.cpp
(+44 files in other folders)
